--- a/BroadleafCommerce/site/BroadleafCommerceAdmin/pom.xml
+++ b/BroadleafCommerce/site/BroadleafCommerceAdmin/pom.xml
@@ -183,9 +183,11 @@
 			<groupId>xml-dir-listing</groupId>
 			<artifactId>xml-dir-listing</artifactId>
 		</dependency>
+		<!-- installed the sqljdbc4.jar in the local repository using an arbitrary groupid and artifactid -->
 		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
+			<groupId>sqljdbc</groupId>
+			<artifactId>sqljdbc</artifactId>
+			<version>4</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
