--- a/BroadleafCommerce/site/BroadleafCommerceDemo/build.xml
+++ b/BroadleafCommerce/site/BroadleafCommerceDemo/build.xml
@@ -69,37 +69,15 @@
 			</java>
 		</sequential>
 	</macrodef>
-	
-	<target name="start-db">  
-        <echo message="Starting Data Base..." />  
-        <java fork="true"  spawn="true" classname="org.hsqldb.Server" classpathref="build.runtime.classpath">  
-            <arg  line="-database.0 file:data/broadleaf -dbname.0 broadleaf"/>  
-        </java>  
-    </target>
-	
-	<target name="stop-db">  
-        <echo message="Execute SQL on new Data Base..." />  
-        <sql  
-            autocommit="true"  
-            print="true"  
-            classpathref="build.runtime.classpath"  
-            driver="org.hsqldb.jdbcDriver"  
-            url="jdbc:hsqldb:hsql://localhost/broadleaf;ifexists=true"  
-            userid="sa"  
-            password="">
-            <transaction>SHUTDOWN</transaction>  
-        </sql>  
-        <echo message="SQL Executed on data base..." />  
-    </target>
 
-	<target name="launch-demo" depends="start-db">
+	<target name="launch-demo">
 		<delete>
 			<fileset dir="src/main/webapp/WEB-INF/lib" includes="*.*"/>
 	  	</delete>
 		<maven-launch basedir="${basedir}" goal="clean compile war:inplace jetty:run" resultproperty="maven.build.result"/>
 	</target>
 	
-	<target name="stop-demo" depends="stop-db">
+	<target name="stop-demo">
 		<maven-stop basedir="${basedir}" goal="jetty:stop" resultproperty="maven.build.result"/>
 	</target>
 	
