--- a/core/BroadleafCommerceProfileWeb/pom.xml
+++ b/core/BroadleafCommerceProfileWeb/pom.xml
@@ -147,5 +147,9 @@
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.castor</groupId>
+		    <artifactId>castor-xml</artifactId>
+		</dependency>
 	</dependencies>
 </project>
