--- a/pom.xml
+++ b/pom.xml
@@ -815,6 +815,12 @@
 				<version>0.2</version>
 				<scope>compile</scope>
 			</dependency>
+			<dependency>
+			    <groupId>org.codehaus.castor</groupId>
+			    <artifactId>castor-xml</artifactId>
+			    <version>1.3.1</version>
+			    <scope>compile</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
