--- a/site/BroadleafCommerceDemo/src/main/webapp/WEB-INF/web.xml
+++ b/site/BroadleafCommerceDemo/src/main/webapp/WEB-INF/web.xml
@@ -78,6 +78,11 @@
         <url-pattern>*.htm</url-pattern>
     </servlet-mapping>
     
+    <servlet-mapping>
+        <servlet-name>bl</servlet-name>
+        <url-pattern>*.xml</url-pattern>
+    </servlet-mapping>
+    
 	<servlet-mapping>
         <servlet-name>bl</servlet-name>
         <url-pattern>/store/*</url-pattern>
