Moved the core concept of a tax from the fulfillment group to FulfillmentGroupItem and FulfillmentGroupFee. This also involved refactoring the CyberSource Tax module to correctly set the fees on the item level.

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 #required
-maven.home=/usr/share/maven
+maven.home=/usr/lib/apache-maven-3.0.2
 #optional
-jrebel.path=/Applications/ZeroTurnaround/JRebel-4.0.3/jrebel.jar
+jrebel.path=/usr/lib/jrebel/jrebel.jar
 yourkit.agent.path=/Applications/YourKit_Java_Profiler_9.0.9.app/bin/mac/
